[package]
name = "kvs"
version = "0.1.0"
authors = ["Yilin Chen <sticnarf@gmail.com>"]
description = "A key-value store"
edition = "2018"

[[bench]]
name = "benches"
harness = false 

[dependencies]
clap = "2.32.0"
failure = "0.1.5"
serde = { version = "1.0.89", features = ["derive"] }
serde_json = "1.0.39"
structopt = "0.2.18"
slog = "2.5.2"
sloggers = "0.3.2"
sled = "0.24.1"
num_cpus = "1.10.1"

[dev-dependencies]
rand = "0.7.0"
criterion = "0.2.11"
assert_cmd = "0.11.0"
predicates = "1.0.0"
tempfile = "3.0.7"
walkdir = "2.2.7"
take_mut = "0.2.2"
crossbeam-utils = "0.6.5"
panic-control = "0.1.4"
